@@ -3187,21 +3187,12 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|// Turn on speculative execution for reducers
+name|boolean
+name|useSpeculativeExecReducers
+init|=
 name|HiveConf
 operator|.
-name|setVar
-argument_list|(
-name|job
-argument_list|,
-name|HiveConf
-operator|.
-name|ConfVars
-operator|.
-name|HADOOPSPECULATIVEEXECREDUCERS
-argument_list|,
-name|HiveConf
-operator|.
-name|getVar
+name|getBoolVar
 argument_list|(
 name|job
 argument_list|,
@@ -3211,6 +3202,20 @@ name|ConfVars
 operator|.
 name|HIVESPECULATIVEEXECREDUCERS
 argument_list|)
+decl_stmt|;
+name|job
+operator|.
+name|setBoolean
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HADOOPSPECULATIVEEXECREDUCERS
+operator|.
+name|varname
+argument_list|,
+name|useSpeculativeExecReducers
 argument_list|)
 expr_stmt|;
 name|String
