@@ -142,6 +142,8 @@ Trunk -  Unreleased
     HIVE-1124. Create view should expand the query text consistently.
     (John Sichi via zshao)
 
+    HIVE-1129. Fix assertion in ExecDriver.execute. (John Sichi via zshao)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
